# connysbrain.eu

./: LICENSE  README.md  pyproject.toml  readme.md  source_attribution.txt  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/eat_and_drink/drink/tea/green_tea/: kukicha.md  matcha.md
docs/entertainment /starcraft/: starcraft.md
docs/entertainment/starcraft/: asl.md
docs/guides/: markdown.md
docs/javascripts/: lightgallery.js  lightgallery.umd.js
docs/overrides/partials/components/: figure.html
docs/programming/editors/: add_git_bash_to_zed.md  zed.md
docs/programming/editors/zed/: .order  add_git_bash_to_zed.md  zed.md
scripts/: generate_nav.py  generate_responsive_images.py
