[project]
name = "connysbrain-eu"
version = "0.1.0"
description = "Connys thoughts"
authors = [
    {name = "Conny Söderholm",email = "conny@connysoderholm.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "zensical (>=0.0.11)",
    "mypy (>=1.19.0,<2.0.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pillow (>=11.0.0)",
    "requests (>=2.32.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-defusedxml (>=0.7.0.20250822,<0.8.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
